# custom_variant

./: CMakeLists.txt  LICENSE  README.md
example/: CMakeLists.txt  example.cpp
include/: custom_variant.hpp
